--- a/objProtectHard/index.html
+++ b/objProtectHard/index.html
@@ -3,7 +3,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <p>THIS VERSION INCLUDES TAMPER CRASHING. CHECKOUT /objProt/ FOR NO CRASHING</p>
+    <p>THIS VERSION INCLUDES TAMPER CRASHING. CHECKOUT /objProtect/ FOR NO CRASHING</p>
     <p>Rules:</p> <br>
     <p>You can do anything but directly overwrite and edit the index.js file or use dev tools. Try and make a tampermonkey script that can expose the player object without using the provided getPlayer and setPlayer methods.</p> <br>
     <p>You can hook before or after the script loads, it does not matter.</p>
